--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
     "framer-motion": "^10.12.8",
+    "mapbox-gl": "^2.15.0",
     "nodemailer": "^6.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-map-gl": "^7.0.25",
     "react-router-dom": "^6.11.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
