--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
+    "antd": "^5.6.1",
     "framer-motion": "^10.12.8",
     "mapbox-gl": "^2.15.0",
+    "moment": "^2.29.4",
     "nodemailer": "^6.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-map-gl": "^7.0.25",
     "react-router-dom": "^6.11.1",
+    "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
