--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@cristiansantana/chile-rut": "^1.0.7",
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
+    "@fdograph/rut-utilities": "^1.4.0",
     "antd": "^5.6.1",
     "chilean-rutify": "^2.1.0",
     "framer-motion": "^10.12.8",
