--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
     "@fdograph/rut-utilities": "^1.4.0",
+    "@hookform/resolvers": "^3.3.2",
     "antd": "^5.6.1",
     "chilean-rutify": "^2.1.0",
+    "formik": "^2.4.5",
     "framer-motion": "^10.12.8",
     "geojson": "^0.5.0",
     "mapbox-gl": "^2.15.0",
@@ -25,6 +27,7 @@
     "nodemailer": "^6.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
     "react-map-gl": "^7.0.25",
     "react-router-dom": "^6.11.1",
@@ -32,7 +35,8 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "validar-rut": "^3.1.0",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
